2012-12-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54170
	* cvt.c (cp_convert_to_pointer): Don't discard side-effects from
	expressions of nullptr_t.
	* typeck.c (build_ptrmemfunc): Likewise.

2013-07-09  Jason Merrill  <jason@redhat.com>

	PR c++/57437
	* typeck.c (check_return_expr): Lambda proxies aren't eligible
	for nrv or return by move.

	PR c++/57545
	* pt.c (convert_nontype_argument) [INTEGER_CST]: Force the
	argument to have the exact type of the parameter.

	PR c++/57551
	* semantics.c (cxx_eval_indirect_ref): Don't try to look through
	a POINTER_PLUS_EXPR for type punning diagnostic.

	PR c++/57831
	* pt.c (tsubst_copy): Handle USING_DECL.

2013-05-20  Jason Merrill  <jason@redhat.com>

	PR c++/57325
	* tree.c (build_cplus_array_type): Copy layout info if element
	type is complete.

2013-05-09  Jason Merrill  <jason@redhat.com>

	PR c++/57047
	* semantics.c (cxx_fold_indirect_ref): Fix thinko.

2013-04-21  Eric Botcazou  <ebotcazou@adacore.com>

	* parser.c (cp_parser_late_return_type_opt): Fix C++ism.

2013-04-15  Jason Merrill  <jason@redhat.com>

	PR c++/56388
	* semantics.c (insert_capture_proxy): Just use index 1 in the
	stmt_list_stack.

2013-04-11  Release Manager

	* GCC 4.7.3 released.

2013-04-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/56819
	* tree.c (strip_typedefs): Copy NON_DEFAULT_TEMPLATE_ARGS_COUNT
	from args to new_args.
	(strip_typedefs_expr): Copy NON_DEFAULT_TEMPLATE_ARGS_COUNT from t to
	r instead of doing {S,G}ET_NON_DEFAULT_TEMPLATE_ARGS_COUNT.

2013-04-01  Jason Merrill  <jason@redhat.com>

	PR c++/56794
	* parser.c (cp_parser_range_for): Don't try to do auto deduction
	in a template if the type of the range is incomplete.

2013-03-29  Jason Merrill  <jason@redhat.com>

	PR c++/56774
	PR c++/35722
	* pt.c (unify_pack_expansion): Fix indexing.

2013-03-23  Jason Merrill  <jason@redhat.com>

	PR c++/54277
	* semantics.c (lambda_capture_field_type): Don't build a
	magic decltype for pointer types.